--- a/index.html
+++ b/index.html
@@ -1,8 +1,4 @@
-<html>
-<head>
-<title>Nth Research and Development</title>
-</head>
-<body>
-Welcome to Nth.
-</body>
-</html>
+---
+title: Nth Research and Development
+---
+Welcome to Nth Research and Development. Site under construction.
